# drevalpy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .safety-policy.yml  API.html  Dockerfile  LICENSE  README.md  README.rst  Singularity  _key_contributors.html  basic_env.yml  contributing.html  create_report.py  demo.config  dreval_colab_demo.ipynb  dreval_demo.ipynb  drevalpy.datasets.html  drevalpy.models.DIPK.html  drevalpy.models.DrugGNN.html  drevalpy.models.MOLIR.html  drevalpy.models.SRMF.html  drevalpy.models.SimpleNeuralNetwork.html  drevalpy.models.SuperFELTR.html  drevalpy.models.baselines.html  drevalpy.models.html  drevalpy.visualization.html  experiment.py  genindex.html  index.html  installation.html  jobs.html  memes.html  news.html  noxfile.py  objects.inv  outputs.html  py-modindex.html  pyproject.toml  (+11 more)
.github/: dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_package.yml  publish-docker.yml  publish_docs.yml  python-package.yml  python-publish.yml  release_drafter.yml  run_tests.yml  safety_scan.yml
Baselines/: .gitignore  base_model.py
Baselines/Naive_predictor/: main.py  model.py  run_naive_predictor.sh
Baselines/gradient_boost_classifier/: main.py  model.py  test_model.py
Baselines/gradient_boost_regressor/: .gitignore  main.py  model.py  test_model.py
Baselines/linear_regression/: .gitignore  main.py  model.py  test_model.py
Baselines/logistic_regression_classifier/: main.py  model.py  test_model.py
Baselines/random_forest_classifier/: main.py  model.py  test_model.py
Baselines/random_forest_regressor/: main.py  model.py  test_model.py
Baselines/support_vector_classifier/: main.py  model.py  test_model.py
Baselines/support_vector_regressor/: main.py  model.py  test_model.py
Baselines/utils/: __init__.py  analysis.py  load_data.py  testing.py  utils.py
Naive_predictor/: main.py  model.py
_downloads/5279763bf4143d4a4919d03efa9445cb/: response_example.csv
_sources/: _key_contributors.rst.txt  contributing.rst.txt  drevalpy.datasets.rst.txt  drevalpy.models.SimpleNeuralNetwork.rst.txt  installation.rst.txt  memes.rst.txt  news.rst.txt  outputs.rst.txt  quickstart.rst.txt  usage.rst.txt
_static/: custom_cookietemple.css
_static/example_data/: gex_example.csv
api/models/: drevalpy.models.baselines.html
configs/: GDSC.yaml
data/: README.md  cell_line_features.csv  convert_to_cellosaurus.py  drug_features.csv  parse_cellosaurus.csv.py
datasets/: __init__.py  gdsc1.py  gdsc2.py
docs/: API.rst  Makefile  _key_contributors.rst  conf.py  contributing.rst  drevalpy.datasets.rst  drevalpy.models.DIPK.rst  drevalpy.models.DrugGNN.rst  drevalpy.models.MOLIR.rst  drevalpy.models.PharmaFormer.rst  drevalpy.models.SRMF.rst  drevalpy.models.SimpleNeuralNetwork.rst  drevalpy.models.SuperFELTR.rst  drevalpy.models.baselines.rst  drevalpy.models.rst  drevalpy.visualization.rst  index.rst  installation.rst  jobs.rst  make.bat  memes.rst  news.rst  quickstart.rst  reference.rst  requirements.txt  runyourmodel.rst  usage.rst
docs/_static/: custom_cookietemple.css
dreval/: README.md  dataset.py  drp_model.py  evaluation.py  experiment.py  moli_wrapper.py  utils.py
dreval/datasets/: dataset.py  gdsc1.py  gdsc2.py
dreval/models/: README.md  __init__.py  drp_model.py  utils.py
dreval/response_datasets/: __init__.py  gdsc1.py  gdsc2.py
drevalpy/: README.md  __init__.py  cli.py  cli_model_testing.py  cli_preprocess_custom.py  cli_run_cv.py  evaluation.py  experiment.py  moli_wrapper.py  pipeline_function.py  response_transformation.py  utils.py
drevalpy/datasets/: __init__.py  ccle.py  curvecurator.py  dataset.py  gdsc1.py  gdsc2.py  loader.py  map_tissues.py  toy.py  utils.py
drevalpy/models/: README.md  __init__.py  drp_model.py  utils.py
drevalpy/visualization/: __init__.py  comp_scatter.py  corr_comp_scatter.py  create_leaderboard.py  create_report.py  critical_difference_plot.py  cross_study_tables.py  heatmap.py  html_tables.py  outplot.py  regression_slider_plot.py  scatter_eval_models.py  single_model_regression.py  utils.py  vioheat.py  violin.py
model_checkpoints/: README.md
models/: README.md  __init__.py  utils.py
models/Baselines/: linear_model.py  random_forest.py
models/DrugRegNet/: DrugRegNetModel.py
models/MOLI/: env_gpu.yml
models/PaccMann/: env.yml  paccmann.py
models/SimpleNeuralNetwork/: env.yml  env_linux.yml  simple_neural_network.py  utils.py
models_code/: __init__.py
models_code/MOLI/: moli_model.py  moli_x_giskard.ipynb
models_code/SimpleNeuralNetwork/: SimpleNeuralNetwork.py  env.yml  simple_neural_network.py  test_simpleneuralnetwork.py  utils.py
models_saved/: README.md
nextflow/: baselines.nf  modules.nf  nextflow.config  run_pipeline.sh
publication_figures/: README.md  ablation_difference.R  cd_diagrams.ipynb  cross_study_visualization.ipynb  curvecurator_comparison.R  data_distributions.R  distribution_plots.R  main_results_dumbbellplots.ipynb  make_umap_embedding.py  make_umap_embedding_plot_highlight.py  omic_overlaps.R  results_table.ipynb  simpsons.ipynb  simpsons_paradox_simple.ipynb  sup_tables_performance_results.R  tables_and_sup_figs.R  variance_decomposition.ipynb
response_datasets/: gdsc1.py
results/: README.md  moli_scan_report.html
suite/: custom_data_wrapper.py  custom_model_wrapper.py  custom_single_drug_model_wrapper.py  data_wrapper.py  dataset.py  drp_model.py  evaluation.py  experiment.py  model.py  model_wrapper.py  moli_wrapper.py  utils.py
tests/: conftest.py  test_available_data.py  test_cv_split_integrity.py  test_dataset.py  test_demo.py  test_drp_model.py  test_evaluation.py  test_featurizers.py  test_hpam_tune.py  test_hpam_tune_raytune.py  test_main.py  test_run_suite.py  test_suite.py  test_tissue_mapping.py  test_train_mutability.py  test_utils.py
utils/: eval_result.py  load_data.py  utils.py
visualization/: README.md  create_report.py  heatmap.py  scatter_eval_models.py  single_model_regression.py  utils.py  violin.py
(+141 files in other folders)
