[tool.poetry]
name = "drevalpy"
version = "1.1.0"
description = "Drug response evaluation of cancer cell line drug response models in a fair setting"
authors = ["DrEvalPy development team"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.20,<2.0"
scipy = "*"
scikit-learn = ">=1.4,<1.6"
pandas = "*"
networkx = "*"
pyyaml = "*"
pytorch-lightning = "*"
torch = ">=2.1,<=2.4"
torch-geometric = "*"
flaky = "*"
requests = "*"
pingouin = "*"
plotly = "*"
matplotlib = "*"
importlib-resources = "*"
curve-curator = {version = "*", optional = true}
ray = {version = "*", optional = true}
toml = {version = "^0.10.2"}
poetry-plugin-export = "*"

[tool.poetry.extras]
fit = ["curve-curator"]
multiprocessing = ["ray"]

[tool.poetry.group.development.dependencies]
sphinx-autodoc-typehints = "<3.0"
sphinx = ">=4.0.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-rtd-theme = ">=1.0.0,<3.0.3"
sphinx-click = ">=3.0.0"
pytest = "*"
nox = "*"
nox-poetry = "*"
black = "*"
isort = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
flake8-rst-docstrings = "*"
darglint = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pyupgrade = "*"
pep8-naming = "*"

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
