[tool.poetry]
name = "drevalpy"
version = "1.3.5"
description = "Drug response evaluation of cancer cell line drug response models in a fair setting"
authors = ["DrEvalPy development team"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.scripts]
drevalpy = "drevalpy.cli:cli_main"
drevalpy-report = "drevalpy.visualization.create_report:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = ">=1.20"
scipy = "<1.16"
scikit-learn = ">=1.4"
pandas = "*"
networkx = "*"
pyyaml = "*"
pytorch-lightning = ">=2.5"
torch = ">=2.1"
torch-geometric = "*"
flaky = "*"
requests = "*"
plotly = "*"
matplotlib = "*"
importlib-resources = "*"
scikit-posthocs = "*"
curve-curator = "*"
toml = {version = "^0.10.2"}
poetry = "^2.0.1"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.extras]
multiprocessing = ["ray"]

[tool.poetry.group.development.dependencies]
sphinx-autodoc-typehints = "*"
sphinx = ">=4.0.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-rtd-theme = ">=1.0.0,<3.0.3"
sphinx-click = ">=3.0.0"
pytest = "*"
nox = "*"
nox-poetry = "*"
black = "*"
isort = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-docstrings = "*"
flake8-rst-docstrings = "*"
darglint = "*"
pre-commit = "*"
pre-commit-hooks = "*"
pyupgrade = "*"
pep8-naming = "*"

[tool.black]
line-length = 120

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
