[metadata]
license_files = LICENSE.txt
[tool.black]
line-length = 120
[tool.isort]
multi_line_output=3
include_trailing_comma=true
balanced_wrapping=true
line_length=120
profile = "black"
[flake8]
select = B,B9,C,D,DAR,E,F,N,RST,S,W
ignore = DAR,D100,D103,D212,D
max-line-length = 120
max-complexity = 10
docstring-convention = google
per-file-ignores =
	tests/*:S101,S301,S403
docstring_style = sphinx
